--- a/task03_0606/css/Astyle.css
+++ b/task03_0606/css/Astyle.css
@@ -93,7 +93,7 @@ header i:nth-of-type(2) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
+  -webkit-box-align:start;
       -ms-flex-align: center;
           align-items: center;
   -ms-flex-flow: column wrap;
