--- a/task03_0606/Views/Home/RestaurentMemberPage.cshtml
+++ b/task03_0606/Views/Home/RestaurentMemberPage.cshtml
@@ -279,7 +279,7 @@
             <div class="modal-footer">
 
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">關閉</button>
-                <button type="button" class="btn btn-primary" onclick="addItemToCart($('#itemId').text())" >加入購物車</button>
+                <button type="button" class="btn btn-primary" onclick="AddToCart($('#itemId').text())" >加入購物車</button>
             </div>
         </div>
     </div>
@@ -316,7 +316,7 @@
                                 </div>
                                 <div class="card-footer">
                                     <div class='product_inner'>
-                                        <button onclick="addItemToCart(@item.productID)">加入購物車</button>
+                                        <button onclick="AddToCart(@item.productID)">加入購物車</button>
                                     </div>
                                 </div>
                             </div>
