--- a/task03_0606/Views/Shared/_CartList.cshtml
+++ b/task03_0606/Views/Shared/_CartList.cshtml
@@ -1,30 +1,65 @@
-﻿<li class="nav-item dropdown">
+﻿@{ 
+    var currentCart = task03_0606.Models.Cart.Operation.GetCurrentCart();
+
+}
+
+
     <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fa fa-fw fa-shopping-cart"></i>
         <span class="indicator text-warning d-none d-lg-block">
-            <i class="fa fa-fw fa-circle">20</i> @*購物筆數*@
+            <i class="fa fa-fw fa-circle">@string.Format("{0}",currentCart.Count)</i> @*購物筆數*@
         </span>
     </a>
     <div class="dropdown-menu" aria-labelledby="alertsDropdown">
         <h6 class="dropdown-header">購物車</h6>
+        @if (currentCart.Count > 0)
+    {
 
+
+        foreach (var cartItem in currentCart)
+    {
+
+        <div class="dropdown-divider"></div>
+        <div class="dropdown-item ">
+            <span class="text-danger">
+                <a href="~/#/Products?productID=@cartItem.produtctId">
+                    <strong> @cartItem.productName </strong>
+                </a>
+                <a onclick="RemoveFromCart(@cartItem.produtctId)" class="btn btn-sm btn-danger pull-right" aria-label="Delete">
+                    <i class="fa fa-trash-o text-white" aria-hidden="true"></i>
+                </a>
+            </span>
+            <div class="dropdown-message">
+                <p>@string.Format("數量：{0}  單價：{1}", cartItem.quantity, cartItem.price)</p>
+            </div>
+        </div>
+}
+        <div class="dropdown-divider"></div>
+        <div class="dropdown-item small">
+            <span>
+                <a href="~/#/ShoppingList?userID=1">詳細購物明細</a>
+                <a href="~/#/Payment" class="btn btn-sm btn-success pull-right"><i class="fa fa-fw fa-dollar"></i>結帳</a>
+            </span>
+        </div>
+
+
+}
+
+        else{
         <div class="dropdown-divider"></div>
         <div class="dropdown-item">
             <span class="text-danger">
-                <a href="~/#/Products?productID=1">
-                    <strong> 產品1 </strong>
-                </a>
-                <a href="~/#/Delete?productID=1" class="btn btn-sm btn-danger pull-right" aria-label="Delete">
-                    <i class="fa fa-trash-o" aria-hidden="true"></i>
-                </a>
+                <strong> 購物車無任何商品 </strong>
             </span>
             <div class="dropdown-message small">
                 This is an automated server response message. All systems are online.
             </div>
         </div>
+        }
 
 
-        <div class="dropdown-divider"></div>
+
+        @*<div class="dropdown-divider"></div>
         <div class="dropdown-item">
             <span class="text-danger">
                 <a href="~/#/Products?productID=2">
@@ -57,6 +92,9 @@
                 <a href="~/#/ShoppingList?userID=1">詳細購物明細</a>
                 <a href="~/#/Payment" class="btn btn-sm btn-success pull-right"><i class="fa fa-fw fa-dollar"></i>結帳</a>
             </span>
-        </div>
+
+        </div>*@
+
+
     </div>
-</li>
+
